    my personal salsa namespace, until I get around to restoring team
    setup).
  * Actually remove Roger Leigh from uploaders (change not included in
    previous upload).  Thanks Roger for your contributions to Debian!
  * Use DEB_BUILD_PROFILES instead of the obsolete DEB_BUILD_PROFILE.
    Closes: #907492.
  * Don't include changes to autogenerated files in patches.

 -- Steve Langasek <vorlon@debian.org>  Wed, 09 Apr 2014 14:04:10 -0700

pam (1.1.8-3.8) unstable; urgency=medium

  * Non-maintainer upload.
  * Set Rules-Requires-Root to binary-targets as pam relies on
    chgrp in debian/rules.
  * Update pam-auth-update to detect write errors and properly
    fail when that happens.  (Closes: #880501)
  * Remove Roger Leigh from uploaders as he has restired from
    Debian.  (Closes: #869348)
  * Reduce priority of libpam0g to optional.
  * Rebuild with a recent version of dpkg-source, which ensures
    that the Build-Depends are correct in the .dsc file.
    (Closes: #890602)
  * Apply patch from Felix Lechner to make pam-auth-update ignore
    editor backup files.  (Closes: #519361)
  * Apply update to Brazilian Portuguese translations of the
    debconf templates.  Thanks to Adriano Rafael Gomes.
    (Closes: #799417)

 -- Niels Thykier <niels@thykier.net>  Sat, 11 Aug 2018 15:31:24 +0000

pam (1.1.8-3.7) unstable; urgency=medium

  * Non-maintainer upload.
  * libpam-modules: Added a config for pam_mkhomedir, disabled by default.
    (Closes: #568577)
  * pam-auth-update: Add support for --enable option which is useful for
    enabling non-default configs without prompting the admin. (LP: #1192719)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 02 Feb 2018 16:57:43 +0200

pam (1.1.8-3.6) unstable; urgency=medium

  * Non-maintainer upload.
  * cve-2015-3238.patch: Add the changes in the generated pam_exec.8
    and pam_unix.8 in addition to (and after) the changes to the
    source .xml files. This avoids unwanted rebuilds that can cause