@@ -1,8 +1,8 @@
 Description: Make documentation reproducible
- Add LC_ALL=C to w3m to avoid changes in the output when build the
+ Add LC_ALL=C.UTF-8 to w3m to avoid changes in the output when build the
  documentation with different locales.
-Author: Juan Picca <jumapico@gmail.com>
-Last-Update: 2015-07-11
+Author: Juan Picca <jumapico@gmail.com>, Steve Langasek <vorlon@debian.org>
+Last-Update: 2019-01-06
 
 --- pam.orig/configure.in
 +++ pam/configure.in
@@ -11,7 +11,7 @@ Last-Update: 2015-07-11
  AC_PATH_PROG([BROWSER], [w3m])
  if test ! -z "$BROWSER"; then
 -     BROWSER="$BROWSER -T text/html -dump"
-+     BROWSER="LC_ALL=C $BROWSER -T text/html -dump"
++     BROWSER="LC_ALL=C.UTF-8 $BROWSER -T text/html -dump"
  else
       enable_docu=no
  fi
