@@ -10,6 +10,7 @@ pam (1.1.8-4) UNRELEASED; urgency=medium
   * Use DEB_BUILD_PROFILES instead of the obsolete DEB_BUILD_PROFILE.
     Closes: #907492.
   * Don't include changes to autogenerated files in patches.
+  * Use LC_ALL=C.UTF-8, not LC_ALL=C, when generating documentation.
 
  -- Steve Langasek <vorlon@debian.org>  Wed, 09 Apr 2014 14:04:10 -0700
 
